# mempool

./: .clang-format  .clang-format-ignore  .clang-tidy  .clangd  .editorconfig  .flake8  .gitignore  .gitlab-ci.yml  .gitmodules  Bender.yml  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  Makefile  Memora.yml  README.md  banshee-config.yaml  python-requirements.txt  spatz_benchmark.sh
.github/: CODEOWNERS  pull_request_template.md
.gitlab/: .gitlab-ci.yml
.gitlab-ci.d/: lint.sh
apps/: .gitignore  Makefile
config/: README.md  config.mk  floo_noc.yml  floo_noc_mempool.yml  floo_noc_minpool.yml  floo_noc_minpool_64core.yml  floo_noc_terapool.yml  mempool.mk  mempool_fpu.mk  mempool_spatz2_fpu.mk  mempool_spatz2_fpu_burst.mk  mempool_spatz4.mk  mempool_spatz4_fpu.mk  mempool_spatz4_fpu_burst.mk  mempool_spatz4_fpu_burst_grsp.mk  mempool_spatz4_fpu_burst_grsp_p.mk  mempool_spatz4_fpu_gre.mk  mempool_spatz4_fpu_gre_b2_g2.mk  mempool_spatz4_fpu_gre_b4_g2.mk  minpool-no-xpulp.mk  minpool.mk  minpool_128core.mk  minpool_64core.mk  minpool_fpu.mk  minpool_spatz2_fpu_burst.mk  minpool_spatz4.mk  minpool_spatz4_fpu.mk  minpool_spatz4_fpu_burst.mk  minpool_spatz4_fpu_burst_grsp.mk  multipool.mk  systolic.mk  terapool.mk  terapool_128core.mk  terapool_64core.mk  terapool_spatz2_fpu.mk  terapool_spatz4_fpu.mk  terapool_spatz8_fpu.mk  terapool_spatz8_fpu_burst.mk  terapool_spatz8_fpu_burst_grsp.mk  terapool_spatz8_fpu_gre.mk  (+3 more)
hardware/: .gitignore  Bender.yml  Makefile  README.md  ana_data_analyse.py  ana_data_gen.sh  bench_apps.fish  run_bm.sh  run_bm_avg_all.sh  run_bm_trace.sh  run_lint.sh
scripts/: env.sh  functions.sh  gen_data.py  license-checker.hjson  license-checker.py  lint.sh  memora_retry.sh  plot_benchmarks.py  run_benchmarks.py  run_clang_format.py  tracemac_csv.py  tracemac_log.py  tracemac_plot.py  tracevis.py
software/: .gitignore  (+1 more)
software/apps/rust_hello/: Cargo.toml  ReadMe.md  riscv32ima-unknown-none-elf.json
software/apps/rust_hello/.cargo/: config.toml
software/apps/rust_hello/src/: main.rs
software/rust-rt/: Cargo.toml  assemble.sh  build.rs  link.x  rrt0.S
software/rust-rt/macros/: Cargo.toml
software/rust-rt/macros/src/: lib.rs
software/rust-rt/src/: barrier.rs  benchmark.rs  init.rs  lib.rs  mat_mul.rs  println.rs
(+1458 files in other folders)
